Add smart receipt scanning, CSV export, and recurring subscriptions